@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Aug 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild,
+  metadata.xml:
+  Add mhash and clustering support.
+
   21 Aug 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild:
   Fix typo if docs path.
 
